kubernetes-templating/frontend/templates/ingress.yaml
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: ingress-front-end
  labels:
    name: front-end
  annotations:
    kubernetes.io/ingress.class: nginx
    kubernetes.io/tls-acme: "true"
    certmanager.k8s.io/cluster-issuer: "letsencrypt-staging"
    certmanager.k8s.io/acme-challenge-type: http01
spec:
  rules:
    - host: shop.35.234.174.147.xip.io
      http:
        paths:
          - path: /
            backend:
              serviceName: front-end
              servicePort: 80
